binsard/tests/compile_fail/union_not_supported.rs
use binsard::{Decode, Encode};

union MyUnion {
    a: u32,
    b: u64,
}

#[derive(Encode, Decode)]
struct WrapUnion {
    u: MyUnion,
}

fn main() {}

